fixed buttons on mobile

--- a/src/components/BentoBox/BentoBox.module.css
+++ b/src/components/BentoBox/BentoBox.module.css
@@ -219,7 +219,7 @@ p {
         padding: auto;
     }
 
-    .bentoBoxWithButton h3 {
+    .bentoBoxWithButton h2 {
         font-size: 0rem;
     }
 
